--- a/index.html
+++ b/index.html
@@ -3,30 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cover Page Generator (.docx)</title>
+  <title>Cover Page Generator</title>
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Load PizZip and Docxtemplater in the correct order -->
   <script src="https://unpkg.com/pizzip@3.1.5/dist/pizzip.min.js"></script>
   <script src="https://unpkg.com/docxtemplater@3.31.2/build/docxtemplater.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 </head>
 <body class="bg-gray-100 p-6">
   <div class="max-w-2xl mx-auto">
-    <h1 class="text-3xl font-bold text-center mb-6">Cover Page Generator (.docx)</h1>
-
+    <h1 class="text-3xl font-bold text-center mb-6">Cover Page Generator</h1>
     <div class="bg-white p-6 rounded-lg shadow mb-6">
       <div class="grid grid-cols-1 gap-4">
-        <input type="text" id="teacher" placeholder="Teacher's Name" class="border p-2 rounded" required />
-        <input type="text" id="student" placeholder="Student's Name" class="border p-2 rounded" required />
-        <input type="text" id="semester" placeholder="Semester" class="border p-2 rounded" required />
-        <input type="text" id="date" placeholder="Date" class="border p-2 rounded" required />
-        <input type="text" id="studentId" placeholder="Student ID" class="border p-2 rounded" required />
+        <input type="text" id="teacher" placeholder="Teacher's Name" class="border p-2 rounded" />
+        <input type="text" id="student" placeholder="Student's Name" class="border p-2 rounded" />
+        <input type="text" id="semester" placeholder="Semester" class="border p-2 rounded" />
+        <input type="text" id="date" placeholder="Date" class="border p-2 rounded" />
+        <input type="text" id="studentId" placeholder="Student ID" class="border p-2 rounded" />
       </div>
       <div class="mt-4">
-        <button onclick="generateDocx()" class="bg-blue-600 text-white px-4 py-2 rounded">
-          Generate .docx
-        </button>
+        <button onclick="generateDocx()" class="bg-blue-600 text-white px-4 py-2 rounded">Generate .docx</button>
       </div>
     </div>
   </div>
@@ -48,11 +43,11 @@
         const doc = new window.docxtemplater().loadZip(zip);
 
         doc.setData({
-          "teacher's name": teacher,
-          "student's name": student,
+          teacher_name: teacher,
+          student_name: student,
           semester: semester,
           date: date,
-          "student's id": studentId,
+          student_id: studentId,
         });
 
         doc.render();
